<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ProgressBar
        android:id="@+id/login_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        style="?android:attr/progressBarStyleLarge"/>

    <ImageView
        android:id="@+id/login_image_view"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:src="@drawable/ic_launcher_background"
        android:contentDescription="@string/app_name" />

    <ScrollView
        android:id="@+id/login_main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/login_email_auto_complete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_email_auto_complete"
                    android:inputType="textEmailAddress"
                    android:textSize="30sp"
                    android:maxLines="1"
                    android:singleLine="true"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/login_password_auto_complete"
                    android:hint="@string/string_login_password_auto_complete"
                    android:textSize="30sp"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"/>

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_button_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:background="@color/black"
                android:textAllCaps="true"
                android:text="@string/login_button_mail_text"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_button_gmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:background="@color/red"
                android:drawableStart="@drawable/common_full_open_on_phone"
                android:textAllCaps="true"
                android:text="@string/login_button_gmail_text"/>

        </LinearLayout>

    </ScrollView>



</LinearLayout>